--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@
 * {
   font-family: "Josefin Sans", sans-serif;
   scroll-behavior: smooth;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
